syntax = "proto3";

option csharp_namespace = "CarDealer.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";

service Insurances {
  
  rpc CreatePrice (CreateInsurancesRequest) returns (InsurancesDTO);
  rpc GetPrice (GetRequest) returns (NullableInsurancesDTO);
  rpc UpdatePrice(InsurancesDTO) returns (google.protobuf.Empty);
  rpc DeletePrice(InsurancesDTO) returns (google.protobuf.Empty);
}

message InsurancesDTO{
	int32 id = 1;
	google.protobuf.Timestamp ExpeditionDate = 2;
}

message NullableInsurancesDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		InsurancesDTO price = 2;
	}
}

message CreateInsurancesRequest{
	Status status = 1;
	string expirationDate = 2;
	string expeditionDate = 3;
	
}

enum Status{   
	Disable = 0;
    Enable = 1;
}
